--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-manifest": "^2.2.39",
     "gatsby-plugin-nprogress": "^2.1.19",
-    "gatsby-plugin-offline": "^3.0.32",
+    "gatsby-plugin-offline": "^2.2.9",
     "gatsby-plugin-prefetch-google-fonts": "^1.4.3",
     "gatsby-plugin-react-helmet": "^3.1.21",
     "gatsby-plugin-sharp": "^2.4.3",
@@ -21,6 +21,7 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
+    "react-responsive-carousel": "^3.1.51",
     "styled-components": "^5.0.0"
   },
   "devDependencies": {
